@@ -67,38 +67,45 @@
 	</progressbar>
 
 	<signalquality>
-	<area x="17%" y="95%" width="12%" height="4%" layer="3">
+	<area x="40%" y="95%" width="12%" height="4%" layer="3">
 		<drawtext x="0" y="0" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="STR: {signalstrength}%   SNR: {signalquality}%" />
 	</area>
 	</signalquality>
+
+	<ecminfo>
+		<area x="29%" y="95%" width="9%" height="4%" layer="3">
+			<!--<drawtext x="0" y="0" font="{light}" fontsize="40%" color="{clrHigh}" text="{cardsystem} Reader: {reader}" />-->
+			<drawtext condition="gt({ecmtime},0)" x="0" y="0" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="ECM Time: {ecmtime} ms" />
+        </area>
+    </ecminfo>
 
 	<signalqualityback>
 	</signalqualityback>
 	
 	<screenresolution>
-		<area x="29%" y="95%" width="9%" height="4%" layer="3">
-			<drawtext  x="0" y="0" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="{screenwidth}x{screenheight}" />
+		<area x="63%" y="95%" width="9%" height="4%" layer="3">
+			<drawtext  x="0" y="0" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="{resolution}" />
 		</area>
-	</screenresolution>   
+	</screenresolution>
 
 	<statusinfo>
-		<area x="38%" y="95%" width="8%" height="4%" layer="3">
-			<drawtext condition="{isEncrypted}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="ENCR"/>
-			<drawtext condition="not{isEncrypted}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="FTA"/>
-		</area>
-		<area x="46%" y="95%" width="8%" height="4%" layer="3">     
+		<area x="18%" y="95%" width="7%" height="4%" layer="3">     
 			<drawtext condition="{isDolby}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="DOLBY" />
 			<drawtext condition="not{isDolby}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="DOLBY"/>
 		</area>
-		<area x="54%" y="95%" width="8%" height="4%" layer="3">     
+		<area x="25%" y="95%" width="8%" height="4%" layer="3">     
 			<drawtext condition="{isStereo}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="STEREO" />
 			<drawtext condition="not{isStereo}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="STEREO"/>
 		</area>             
-		<area x="62%" y="95%" width="8%" height="4%" layer="3">     
+		<area x="32%" y="95%" width="9%" height="4%" layer="3">     
 			<drawtext condition="{isRadio}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="RADIO" />
 			<drawtext condition="not{isRadio}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="RADIO"/>
-		</area>             
-		<area x="70%" y="95%" width="8%" height="4%" layer="3">     
+		</area>
+		<area x="52%" y="95%" width="11%" height="4%" layer="3">
+			<!--<drawtext condition="{isEncrypted}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="ENCR"/>-->
+			<drawtext condition="not{isEncrypted}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="FREE-TO-AIR"/>
+		</area>
+		<area x="71%" y="95%" width="7%" height="4%" layer="3">     
 			<drawtext condition="{hasVT}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="VTX" />
 			<drawtext condition="not{hasVT}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="VTX"/>
 		</area>      
