@@ -96,4 +96,8 @@ shady-skin Revision History
 2015-04-30:
 
 - Added setup for single- or two-line display of titel/subtitle in replay and channelinfo
-- Adapted defaultmenu.xml to menucategory setup 
+- Adapted defaultmenu.xml to menucategory setup
+
+2015-05-05:
+
+- Added ecmtime to channelinfo
